fixing misalignment

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 /* General for every page */
-body {
+  body {
     padding: 0%;
     margin: 0%;
     width: 100%;
@@ -219,6 +219,8 @@ body {
       font-size: 100%;
       padding: 2% 4%;
       justify-self: center;
+      text-align: center;
+      justify-content: center;
       font-family: 'Oswald';
     }
 
@@ -403,6 +405,8 @@ body {
       font-size: 100%;
       padding: 2% 4%;
       justify-self: center;
+      text-align: center;
+      justify-content: center;
       font-family: 'Oswald';
     }
 
@@ -790,6 +794,8 @@ body {
         display: block;
         width: 80%;
         justify-self: center;
+        justify-content: center;
+        justify-items: center;
         text-align: center;
         margin-bottom: 5%;
         animation: slideFromLeft 0.5s ease-out;
@@ -842,6 +848,8 @@ body {
         justify-self: center;
         text-align: center;
         justify-content: center;
+        justify-content: center;
+        justify-items: center;
         margin-bottom: 5%;
         animation: slideFromLeft 0.5s ease-out;
       }
@@ -894,6 +902,8 @@ body {
         display: block;
         width: 80%;
         justify-self: center;
+        justify-content: center;
+        justify-items: center;
         text-align: center;
         margin-bottom: 2%;
       }
@@ -963,6 +973,7 @@ body {
         width: 80%;
         justify-self: center;
         justify-content: center;
+        justify-items: center;
         text-align: center;
         margin-bottom: 1%;
       }
